# variant-abi-dependency-example

./: Makefile  README.md  index.html  pyproject.toml
abi_dependent/: Makefile  pyproject.toml
base_project/: Makefile  pyproject.toml
docs/: index.html
docs/abi_dependent/: abi_dependent-0.0.1-py2.py3-none-any-abi_1.0.0.whl  abi_dependent-0.0.1-py2.py3-none-any-abi_2.0.0.whl  abi_dependent-0.0.1-py2.py3-none-any-abi_3.0.0.whl  abi_dependent-0.0.1-py2.py3-none-any-null.whl  index.html
docs/base_project/: base_project-1.0.0-py2.py3-none-any.whl  base_project-2.0.0-py2.py3-none-any.whl  base_project-3.0.0-py2.py3-none-any.whl  index.html
docs/flash_attn/: flash_attn-2.8.0-py3-none-any-cu12_pyt2.8.0.whl  flash_attn-2.8.0-variants.json
docs/nvidia-variant-provider/: index.html  nvidia_variant_provider-0.0.2-py3-none-any.whl
docs/torch/: index.html  torch-2.8.0-py3-none-any-cuda12.6.whl  torch-2.8.0-py3-none-any-cuda12.8.whl  torch-2.8.0-py3-none-any-cuda12.9.whl  torch-2.8.0-variants.json  torch-2.9.0-py3-none-any-cuda12.6.whl  torch-2.9.0-py3-none-any-cuda12.8.whl  torch-2.9.0-py3-none-any-cuda13.0.whl  torch-2.9.0-variants.json
docs/v0.0.2/: index.html
docs/v0.0.2/flash_attn/: flash_attn-2.8.0-py3-none-any-cu12_pyt2.9.0.whl  flash_attn-2.8.0-py3-none-any-cu13_pyt2.9.0.whl  index.html
docs/v0.0.2/torch/: torch-2.8.0-py3-none-any-cuda12.6.whl  torch-2.8.0-py3-none-any-cuda13.0.whl  torch-2.9.0-py3-none-any-cuda13.0.whl
docs/v0.0.2/vllm/: index.html  vllm-0.11.0-py3-none-any-cu128_pyt2.8.0.whl  vllm-0.11.0-variants.json
docs/v0.0.3/flash_attn/: flash_attn-2.8.0-py3-none-any-cu12_pyt2.8.0.whl  flash_attn-2.8.0-py3-none-any-cu12_pyt2.9.0.whl  flash_attn-2.8.0-py3-none-any-cu13_pyt2.9.0.whl  flash_attn-2.8.0-variants.json
docs/v0.0.3/torch/: torch-2.8.0-py3-none-any-cuda12.6.whl  torch-2.8.0-py3-none-any-cuda12.8.whl  torch-2.8.0-py3-none-any-cuda13.0.whl  torch-2.8.0-variants.json  torch-2.9.0-py3-none-any-cuda12.6.whl  torch-2.9.0-py3-none-any-cuda12.8.whl  torch-2.9.0-py3-none-any-cuda13.0.whl  torch-2.9.0-variants.json
docs/v0.0.3/vllm/: vllm-0.11.0-py3-none-any-cu128_pyt2.8.0.whl  vllm-0.11.0-variants.json
flash_attention/: Makefile  pyproject.toml
torch/: Makefile  pyproject_2.8.0.toml  pyproject_2.9.0.toml
vllm/: Makefile  pyproject.toml
